force-app/main/default/objects/Collection_Team_Page__c/fields/AP_Balance__c.field-meta.xml
<CustomField>
    <fullName>AP_Balance__c</fullName>
    <label>AP Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>