force-app/main/default/objects/Collection_Team_Page__c/fields/Bad_Debt_Type__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_Type__c</fullName>
    <label>Bad Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Activation Chargeback</fullName>
                <label>Program Activation or Equipment Chargeback</label>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>ISG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>