force-app/main/default/objects/Collection_Team_Page__c/fields/Doc_delivered_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Doc_delivered_to_Accounting__c</fullName>
    <label>Doc delivered to Accounting</label>
    <type>Date</type>
</CustomField>