force-app/main/default/objects/Collection_Team_Page__c/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <formula>Account_Name__r.Hold_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Date</label>
    <type>Date</type>
</CustomField>