force-app/main/default/objects/Collection_Team_Page__c/fields/ISG_Type__c.field-meta.xml
<CustomField>
    <fullName>ISG_Type__c</fullName>
    <label>ISG Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>WISP</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>