force-app/main/default/objects/Collection_Team_Page__c/fields/Notes_Collection_Situation__c.field-meta.xml
<CustomField>
    <fullName>Notes_Collection_Situation__c</fullName>
    <label>Notes/Collection Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>