force-app/main/default/objects/Collection_Team_Page__c/fields/Notes_from_Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Collection_Agency__c</fullName>
    <label>Notes from Collection Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>