force-app/main/default/objects/Collection_Team_Page__c/fields/Payment_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Notes__c</fullName>
    <label>Payment Plan Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>