force-app/main/default/objects/Collection_Team_Page__c/fields/Payment_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Type__c</fullName>
    <label>Payment Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>