force-app/main/default/objects/Collection_Team_Page__c/fields/Potential_Chargebacks__c.field-meta.xml
<CustomField>
    <fullName>Potential_Chargebacks__c</fullName>
    <label>Potential Chargebacks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>