force-app/main/default/objects/Collection_Team_Page__c/fields/Program_Chargebacks_Associated__c.field-meta.xml
<CustomField>
    <fullName>Program_Chargebacks_Associated__c</fullName>
    <label>Program Chargebacks Associated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDP</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>DIRECTV/ATT Direct Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>