force-app/main/default/objects/Collection_Team_Page__c/fields/PV_Collection_Stage__c.field-meta.xml
<CustomField>
    <fullName>PV_Collection_Stage__c</fullName>
    <label>PV Collection Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>PV Collection</fullName>
            </value>
            <value>
                <fullName>Outside Collection Proposed</fullName>
            </value>
            <value>
                <fullName>Sent to Collections</fullName>
            </value>
            <value>
                <fullName>Write Off Proposed</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>