force-app/main/default/objects/Collection_Team_Page__c/fields/Summarize_what_Actions_have_been_taken__c.field-meta.xml
<CustomField>
    <fullName>Summarize_what_Actions_have_been_taken__c</fullName>
    <label>Actions Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>