force-app/main/default/objects/Collection_Team_Page__c/fields/Summarize_What_the_Balance_is_Made_up_Of__c.field-meta.xml
<CustomField>
    <fullName>Summarize_What_the_Balance_is_Made_up_Of__c</fullName>
    <label>Summarize What the Balance is Made up Of</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>