force-app/main/default/objects/Collection_Team_Page__c/fields/Total_to_be_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Total_to_be_Written_Off__c</fullName>
    <label>Total to be Written Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>